# CatEx

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  启动 CatEx 工作台.cmd
.github/workflows/: core-ci.yml
apps/web/: index.html  package.json  tsconfig.app.json  vite.config.ts
docs/: CATALYSIS_IDENTITIES.md  ELECTRONIC_STRUCTURE_ANALYSIS.md  ENERGY_COMPATIBILITY.md  ENVIRONMENT_AUDIT.md  HPC_POTCAR_METADATA.md  HPC_SHELL_MODES.md  MATERIALS_STUDIO_ADAPTER.md  PROJECT_EXECUTION_PLAN.md  PROTOCOL_AND_SLURM_DRY_RUN.md  REACTION_NETWORK_CHE_AND_READINESS.md  REACTION_THERMOCHEMISTRY.md  RUN_BINDING.md  SCHEMAS.md  SCIENTIFIC_RESULT_REVIEW.md  SECURITY_AND_DATA_POLICY.md  SLURM_OBSERVATION_AND_RESTART.md  STRUCTURE_AND_CONFIGURATION_GENERATION.md  VASP_INPUT_VALIDATION.md  VASP_OUTPUT_PARSING.md  WEB_POC.md
docs/adr/: 0001-platform-architecture.md  0002-materials-studio-integration.md  0003-web-workbench-architecture.md
projects/paper4_co2rr_dac_reproduction/: README.md  che-protocol-draft.json  environment.yml  production-readiness.json  reaction-network-draft.json  thermochemistry-requirements.json
scripts/: start_web_poc.mjs
src/catex/: __init__.py  __main__.py  cli.py  (+3 more)
tests/: conftest.py  test_catalysis_generation.py  test_catalysis_identities.py  test_cli.py  test_comparison.py  test_electrocatalysis_templates.py  test_electronic_structure.py  test_energy_compatibility.py  test_hashing.py  test_hpc_potcar_metadata.py  test_hpc_run_binding.py  test_hpc_slurm_observation.py  test_inspection.py  test_materials_studio_adapter.py  test_models.py  test_nonpaper4_end_to_end.py  test_paper4_production_readiness.py  test_paper4_regression.py  test_reaction_network_che_readiness.py  test_reaction_thermochemistry.py  test_structure_transformations.py  test_vasp_incar.py  test_vasp_kpoints.py  test_vasp_output.py  test_vasp_potcar.py  test_vasp_registry.py  test_vasp_thermochemistry.py  test_vasp_validation.py  test_web_api.py  test_web_application.py  test_web_calculations.py  test_web_hpc.py  test_web_projects.py  test_web_reference_cases.py  test_web_structure_inputs.py  test_workflow_materialize.py  test_workflow_protocol.py  test_workflow_slurm.py
(+110 files in other folders)
